# audioware

./: .gitignore  .markdownlint.json  .redscript  404.html  API.html  AUDIO_SETTINGS_EXT.html  AUDIO_SYSTEM.html  AUDIO_SYSTEM_EXT.html  CONCEPT.html  Cargo.toml  DOCS.html  DYNAMIC_EMITTERS.html  DYNAMIC_SOUNDS.html  GETTING-STARTED.html  GUIDE.html  HOWTO.html  INTEGRATION.html  MANIFEST.html  NATIVE_INTEGRATION.html  PARAMETERS.html  README.md  RELEASE.md  ROUTING.html  SCENE_DIALOG_LINES.html  SECTIONS.html  SETTINGS.html  SPATIALIZATION.html  System.reds  addresses.hpp  index.html  justfile  print.html  rust-toolchain.toml  rustc-ice-2024-07-26T03_42_01-8032.txt  rustc-ice-2024-07-26T03_42_01-9792.txt  rustc-ice-2024-07-26T03_44_05-23008.txt  rustc-ice-2024-07-26T03_44_17-20352.txt  searchindex.js  searchindex.json  silence.wem
addr/: Cargo.toml
addr/src/: lib.rs
audioware/: Cargo.toml  build.rs
audioware-native/: Cargo.toml
audioware-native/src/: fifth.rs  first.rs  fourth.rs  main.rs  second.rs  third.rs
audioware-types/: Cargo.toml
audioware-types/src/: event.rs  lib.rs
audioware-types/src/interop/: cruid.rs  entity.rs  game.rs  gender.rs  icomponent.rs  iscriptable.rs  locale.rs  localization.rs  mod.rs  quaternion.rs  vector4.rs
audioware/reds/: Args.reds  AudioSystemExt.reds  Codeware.reds  Compat.reds  Component.reds  Config.reds  Debug.reds  DebugExt.reds  Ext.reds  Hooks.reds  Listener.reds  LocomotionEvent.reds  Natives.reds  Orphans.reds  Plugin.reds  Preset.reds  Service.reds  Settings.reds  Spatialization.reds  System.reds  TestOneStruct.reds  Tween.reds  Utils.reds  audioware.reds
audioware/src/: abi.rs  addresses.rs  audio.rs  banks.rs  config.rs  debug.rs  engine.rs  error.rs  ext.rs  frame.rs  game.rs  gender.rs  hook.rs  hooks.rs  intercept.rs  language.rs  lib.rs  locale.rs  macros.rs  manager.rs  maybe.rs  natives.rs  old_engine.rs  plugin.rs  queue.rs  spatialization.rs  state.rs  states.rs  system.rs  types.rs  utils.rs
audioware/src/abi/: command.rs  command.rs.rej  lifecycle.rs  mod.rs
audioware/src/abi/lifecycle/: board.rs  codeware.rs  session.rs
audioware/src/bank/: conflict.rs  conv.rs  ensure.rs  error.rs  id.rs  key.rs  mod.rs
audioware/src/engine/: banks.rs  collector.rs  commands.rs  destination.rs  effects.rs  eq.rs  error.rs  handles.rs  id.rs  localization.rs  manager.rs  mod.rs  modulators.rs  player.rs  queue.rs  scene.rs  settings.rs  sounds.rs  state.rs  track.rs  tracks.rs  tweens.rs  wrapper.rs
audioware/src/engine/core/: collector.rs  mod.rs  sounds.rs  state.rs
audioware/src/engine/modulators/: mod.rs  playback.rs  reverb.rs  volume.rs
audioware/src/engine/tracks/: ambience.rs  car_radio.rs  custom_track.rs  dialogue.rs  environment.rs  holocall.rs  mod.rs  music.rs  radioport.rs  sfx.rs  v.rs
audioware/src/hook/: address.rs  mod.rs
audioware/src/hook/audiosystem/: add_trigger_effect.rs  global_parameter.rs  mod.rs  parameter.rs  play.rs  play_on_emitter.rs  state.rs  stop.rs  switch.rs
audioware/src/hook/event/: dialog.rs  mod.rs  music.rs  sound.rs  voice.rs
audioware/src/hooks/: audio_system.rs  dialog_line.rs  dialog_line_end.rs  entity.rs  events.rs  global_parameter.rs  load_save_in_game.rs  load_soundbanks.rs  mod.rs  on_transform_updated.rs  parameter.rs  play.rs  play_on_emitter.rs  play_sound.rs  play_sound_on_emitter.rs  queue_event.rs  queue_event_for_entity_id.rs  save_handling_controller.rs  set_local_orientation.rs  set_local_position.rs  set_parameter_on_emitter.rs  sound_parameter.rs  sound_play_vo.rs  sound_switch.rs  stop.rs  stop_dialog_line.rs  stop_sound.rs  stop_sound_on_emitter.rs  stop_tagged_sounds.rs  switch.rs  time_dilatable.rs  time_system.rs  voice_event.rs  voice_play_event.rs  voice_played_event.rs
audioware/src/hooks/events/: audio.rs  choice.rs  dialog_line.rs  dialog_line_end.rs  dive.rs  emerge.rs  mod.rs  music.rs  play_sound.rs  play_sound_on_emitter.rs  sound_event.rs  (+14 more)
audioware/src/interop/: audio.rs  event.rs  gender.rs  locale.rs  localization.rs  mod.rs  music.rs  sound.rs  sound_play_event.rs  voice.rs
audioware/src/manifest/: conv.rs  de.rs  depot.rs  error.rs  mod.rs  types.rs
audioware/src/state/: game.rs  mod.rs  player.rs
audioware/src/states/: game.rs  mod.rs  player.rs
audioware/src/types/: audioware.rs  bank.rs  codeware.rs  error.rs  id.rs  local.rs  manifest.rs  mod.rs  new_voice.rs  redmod.rs  sfx.rs  vanilla.rs  voice.rs
audioware/tests/: audioware.yml  radios.yml  voices.yml  voices2.yml
crates/audioware/: Cargo.toml  build.rs
crates/audioware/reds/: Callback.reds  Codeware.reds  Config.reds  Controller.reds  Debug.reds  Effect.reds  Event.reds  Ext.reds  Listener.reds  Manager.reds  Natives.reds  PreGame.reds  Preset.reds  Service.reds  Settings.reds  System.reds  Trigger.reds  Tween.reds  Utils.reds
crates/audioware/src/: cache.rs  config.rs  debug.rs  error.rs  lib.rs  utils.rs
crates/audioware/tests/: README.md  voices.yml
crates/bank/: Cargo.toml
crates/bank/src/: conflict.rs  ensure.rs  error.rs  id.rs  key.rs  lib.rs  scene_id.rs  scene_key.rs  storage.rs  usage.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: de.rs  error.rs  types.rs
engine/: Cargo.toml
engine/src/: effect.rs  error.rs  id.rs  lib.rs  manager.rs  modulator.rs  scene.rs  track.rs  utils.rs
engine/src/modulator/: volume.rs
engine/src/state/: player.rs
engine/src/track/: ambience.rs
macros/: Cargo.toml
macros/audioware-macros/: Cargo.toml
macros/audioware-macros/src/: lib.rs
macros/src/: lib.rs
manifest/: Cargo.toml
manifest/src/: de.rs  depot.rs  error.rs  lib.rs  macros.rs  types.rs  utils.rs
manifest/src/de/: bnk.rs  jingle.rs  mod.rs  music.rs  ono.rs  playlist.rs  setting.rs  sfx.rs  voice.rs
manifest/src/types/: gender.rs  line.rs  locale.rs
mem/: Cargo.toml
mem/src/: frame.rs  hook.rs  lib.rs  module.rs
sys/: Cargo.toml
sys/src/: error.rs  lib.rs
sys/src/interop/: angles.rs  audio.rs  cruid.rs  entity.rs  event.rs  game.rs  gender.rs  hash.rs  iscriptable.rs  locale.rs  mod.rs  vector4.rs
(+18279 files in other folders)
