[workspace]
members = ["crates/core", "crates/manifest", "crates/bank", "crates/audioware"]
resolver = "2"

[workspace.package]
version = "1.4.6"
edition = "2024"
rust-version = "1.88.0"

[profile.release]
codegen-units = 1

[profile.staging]
inherits = "release"
debug = true

[workspace.dependencies]
audioware-core = { path = "crates/core" }
audioware-manifest = { path = "crates/manifest" }
audioware-bank = { path = "crates/bank" }
either = "1.15.0"
glam = "0.30.0"
kira = { version = "0.10.6", features = ["serde"] }
rayon = "1.10"
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs", rev = "v0.10.0" }
serde = "1.0"
snafu = "0.8"

[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-codec-pcm]
opt-level = 3
