[workspace]
members = ["crates/core", "crates/manifest", "crates/bank", "crates/audioware"]
resolver = "2"

[workspace.package]
version = "1.6.2"
edition = "2024"
rust-version = "1.92.0"

[profile.release]
codegen-units = 1

[profile.staging]
inherits = "release"
debug = true

[workspace.dependencies]
audioware-core = { path = "crates/core" }
audioware-manifest = { path = "crates/manifest" }
audioware-bank = { path = "crates/bank" }
either = "1.15.0"
glam = "0.30.0"
humantime = "2.3"
kira = { version = "0.11.0", features = ["serde"] }
rayon = "1.11"
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs", rev = "411ccf1" }
serde = "1.0"
snafu = "0.8"

[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-codec-pcm]
opt-level = 3
