[package]
name = "audioware-types"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cxx.workspace = true
fixed-map.workspace = true
red4ext-rs.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
static_assertions.workspace = true
