[package]
name = "audioware"
version.workspace = true
edition.workspace = true
publish = false
description = "CP2077 modding tool: allows to play any audio file, without replacement"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audioware-bank.workspace = true
audioware-manifest.workspace = true
either.workspace = true
glam = { version = "0.27.0", features = ["mint"] }
kira.workspace = true
mint = { version = "0.5" }
red4ext-rs.workspace = true
snafu.workspace = true
snowflake.workspace = true
