[package]
name = "audioware"
version.workspace = true
edition.workspace = true
publish = false
description = "CP2077 modding tool: allows to play any audio file, without replacement"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audioware-bank.workspace = true
audioware-manifest.workspace = true
cpal = "0.15"
either.workspace = true
glam = { version = "0.28", features = ["mint"] }
kira.workspace = true
mint = { version = "0.5" }
once_cell = "1.19"
rayon.workspace = true
red4ext-rs.workspace = true
rust-ini = "0.21"
snafu.workspace = true
snowflake.workspace = true

[package.metadata.cargo-machete]
ignored = ["rust-ini"]
