[package]
name = "audioware"
version.workspace = true
edition.workspace = true
publish = false
description = "CP2077 modding tool: allows to play any audio file, without replacement"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audioware-core.workspace = true
audioware-bank.workspace = true
audioware-manifest.workspace = true
cpal = "0.15"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dashmap = { version = "6.0", features = ["inline", "rayon"] }
either.workspace = true
glam = { workspace = true, features = ["mint"] }
kira.workspace = true
mint = { version = "0.5" }
once_cell = "1.19"
parking_lot = "0.12"
rayon.workspace = true
red4ext-rs.workspace = true
rust-ini = "0.21"
snafu.workspace = true
snowflake.workspace = true

[build-dependencies]
semver = "1.0"

[package.metadata.cargo-machete]
ignored = ["rust-ini"]
