[package]
name = "audioware-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
audioware-core.workspace = true
audioware-bank.workspace = true
audioware-macros.workspace = true
audioware-manifest.workspace = true
audioware-mem.workspace = true
audioware-sys.workspace = true
either = "1.12.0"
fixed-map.workspace = true
glam.workspace = true
humantime = "2.1.0"
humantime-serde = "1.1.1"
kira.workspace = true
memoffset.workspace = true
once_cell.workspace = true
rayon.workspace = true
red4ext-rs.workspace = true
retour.workspace = true
semver = { version = "1", features = ["serde"] }
serde.workspace = true
serde_yaml = "0.9"
snafu.workspace = true
snowflake = "1.3.0"
strum.workspace = true
strum_macros.workspace = true
test-case = "3.3.1"
ulid = "1.1.2"
validator = { version = "0.18.1", features = ["derive"] }
