[package]
name = "audioware-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
audioware-core.workspace = true
audioware-bank.workspace = true
audioware-macros.workspace = true
audioware-sys.workspace = true
either = "1.12.0"
glam.workspace = true
kira.workspace = true
once_cell.workspace = true
rayon.workspace = true
red4ext-rs.workspace = true
snafu.workspace = true
snowflake = "1.3.0"
