[package]
name = "audioware-macros"
version.workspace = true
edition.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
audioware-mem.workspace = true
syn = "2"
proc-macro2 = "1"
quote = "1"

[dev-dependencies]
lazy_static.workspace = true
red4ext-rs.workspace = true
retour.workspace = true
