[package]
name = "audioware-manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
audioware-core.workspace = true
audioware-sys.workspace = true
either = "1.12.0"
humantime = "2.1.0"
humantime-serde = "1.1.1"
kira.workspace = true
rayon.workspace = true
red4ext-rs.workspace = true
semver = { version = "1", features = ["serde"] }
serde.workspace = true
serde_yaml = "0.9"
snafu.workspace = true
test-case = "3.3.1"

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]