[package]
name = "audioware-mem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx.workspace = true
red4ext-rs.workspace = true
retour = "0.3.1"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = ["libloaderapi"] }
