[package]
name = "audioware-sys"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cxx.workspace = true
fixed-map.workspace = true
glam.workspace = true
kira.workspace = true
mint = "0.5.9"
red4ext-rs.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
static_assertions.workspace = true

[features]
default = ["codeware"]
codeware = []
