[package]
name = "audioware-sys"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audioware-macros.workspace = true
audioware-mem.workspace = true
cxx.workspace = true
fixed-map.workspace = true
kira.workspace = true
memoffset.workspace = true
mint.workspace = true
red4ext-rs.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
strum_macros.workspace = true

[dev-dependencies]
static_assertions.workspace = true

[features]
default = ["codeware"]
codeware = []

[package.metadata.cargo-machete]
ignored = ["audioware-mem", "memoffset", "strum"]
