[package]
name = "audioware-bank"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
audioware-core.workspace = true
audioware-manifest.workspace = true
either.workspace = true
kira.workspace = true
red4ext-rs.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
snafu.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]

[features]
default = []
hot-reload = []
